# api/swagger/swagger.yaml
@@ -115,6 +115,54 @@ paths:
         default:
           $ref: '#/responses/Error'
 
+  /device/{id}/hide:
+    x-swagger-router-controller: system
+    get:
+      operationId: hideDevice
+      security:
+      - Oauth:
+        - user
+        - admin
+        - system
+      produces:
+      - application/json
+      parameters:
+      - in: path
+        name: id
+        required: true
+        type: string
+      responses:
+        200:
+          description: ok
+          schema:
+            type: object
+        default:
+          $ref: '#/responses/Error'
+
+  /device/{id}/show:
+    x-swagger-router-controller: system
+    get:
+      operationId: showDevice
+      security:
+      - Oauth:
+        - user
+        - admin
+        - system
+      produces:
+      - application/json
+      parameters:
+      - in: path
+        name: id
+        required: true
+        type: string
+      responses:
+        200:
+          description: ok
+          schema:
+            type: object
+        default:
+          $ref: '#/responses/Error'
+
   /device/{id}:
     x-swagger-router-controller: system
     delete:
